[package]
name = "Latin-vocab-test-maker"
version = "0.1.0"
authors = ["Simon Pitt <si_pitt@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "6.1.2"
serde = { version = "1.0.106", features = ["derive"] }
serde_derive = "1.0.106"
csv = "1.1.3"
ncurses = "5.99.0"
lazy_static = "1.4.0"
mw-past = { path = "../mw-past" }
regex = "1.3.9"
